--- a/Komunalservice/styles.css
+++ b/Komunalservice/styles.css
@@ -6,12 +6,12 @@
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f0f0f0; 
+    background-color: #f0f0f0;
 }
 
 .mobile-screen {
